ajustes de diseño (registro, index, contacto, buzon, recuperar)

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,31 +24,29 @@
         <b><h1 class="text">EmergencyApp</h1></b>
     </header>
     <div class="content-wrapper">
+        <div class="text-section">
+            <center><h2 class="text-section">Bienvenidos a EmergencyApp</h2>
+            <p class="text-section2">Accede a tu cuenta para descubrir este mundo de entrenamientos seguros</p></center>
+        </div>
+
         <div class="form-section">
             <div class="container">
                 <center><h2 style="font-weight: 700; color: #ffc105">Iniciar sesión</h2></center>
                 <br>
                 <form action="/database/login" method="post">
                     <center>
-                        <!--label for="usuario">Nombre:</label-->
                         <input type="text" id="usuario" name="Correo" class="inputs" placeholder="Escribe tu usuario" required>
-                        <!--label for="contrasena">Contraseña:</label-->
                         <input type="password" id="contrasena" name="Password" class="inputs" placeholder="Escribe tu contraseña" required>
                         <br><br>
                         <input type="submit" value="INICIAR SESIÓN" class="iniciar">
                         <br><br>
-                        <a href="Alumnos" style="font-weight: 300; color: #ffc105; text-decoration: underline;">¿Olvidaste tu contraseña?</a>
+                        <a href="Recuperar" style="font-weight: 300; color: #ffc105; text-decoration: underline;">¿Olvidaste tu contraseña?</a>
                         <br><br>
                         ¿No tienes una cuenta? <a href="registro" style="font-weight: 300; color: #ffc105; text-decoration: underline;">Crea una ahora mismo</a>
                         <br>
                     </center>
                 </form>
             </div>
-        </div>
-
-        <div class="text-section">
-            <center><h2 class="text-section">Bienvenidos a EmergencyApp</h2>
-            <p class="text-section2">Accede a tu cuenta para descubrir este mundo de entrenamientos.</p></center>
         </div>
     </div>
 
