--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -56,10 +56,10 @@ header {
     text-align: center;
     font-size: 1.3em;
     /*text-shadow: 10px 5px 10px #000000, 0 0 5px #ffc105;*/
-    -webkit-text-fill-color: black;
+    -webkit-text-fill-color: rgb(255, 255, 255);
     /*-webkit-text-stroke: 0.3px white;*/
-    font-weight: 900;
-    margin-top: -120px;
+    font-weight: 600;
+    /*margin-top: -120px;*/
 }
 
 .text-section2 {
@@ -68,8 +68,8 @@ header {
     text-align: center;
     font-size: 1.2em;
     /*text-shadow: 10px 5px 10px #000000, 0 0 5px #ffc105;*/    
-    font-weight: 700;
-    -webkit-text-fill-color: black;
+    font-weight: 600;
+    -webkit-text-fill-color: rgb(255, 255, 255);
     -webkit-text-stroke: 0 transparent!important;
 }
 
@@ -89,6 +89,7 @@ header {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+    outline: none;
 }
 
 input[type=submit] {
@@ -105,6 +106,25 @@ input[type=submit]:hover {
     background-color: white;
 }
 
+input[type=button] {
+    background-color: #ffc105;
+    color: rgb(0, 0, 0);
+    padding: 12px 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+input[type=button]:hover {
+    background-color: white;
+}
+.button-container {
+    display: flex;
+    justify-content: center; 
+    gap: 180px; 
+}
+
 .container-principal {
     display: flex;
     justify-content: space-between;
@@ -116,8 +136,8 @@ input[type=submit]:hover {
 .container {
     flex: 1;
     padding: 70px;
-    /*background-color: #333;*/
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+    background-color: #333333d3; 
+    box-shadow: 0 20px 14px rgba(0, 0, 0, 0.5);
     border-radius: 10px; 
     border: 1px solid white;
     min-width: 400px;
@@ -136,8 +156,8 @@ input[type=submit]:hover {
 .containerDos {
     flex: 1;
     padding: 70px;
-    /*background-color: #333;*/
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+    background-color: #333333d3;
+    /*box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); */
     border-radius: 10px; 
     border: 1px solid white;
     min-width: 400px;
@@ -153,4 +173,31 @@ form {
 
 form label {
     margin-top: 10px;
+}
+
+
+.input-container {
+  position: relative;
+  margin-top: 20px;
+}
+
+.input-container label {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: #ffffff;
+  font-size: 16px;
+  
+  padding: 0 5px;
+  transition: 0.3s ease;
+  pointer-events: none;
+}
+
+/* Efecto de flotación del label */
+.inputs:focus + label,
+.inputs:not(:placeholder-shown) + label {
+  top: -6px;
+  text-shadow: 0 2px 4px black;
+  font-size: 12px;
+  color: #ffffff;
 }
