--- a/src/views/BuzonQuejas.ejs
+++ b/src/views/BuzonQuejas.ejs
@@ -1,162 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Buzón de Quejas UFCJ</title>
+        <title>Buzón de Quejas</title>
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
         <!--metadatos-->
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
-        <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
+        <meta name="description" content="EmergencyApp"/>
+        <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda"/>
         <meta name="robots" content="index"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/EstiloFooter.css">
         <link rel="stylesheet" href="/css/index.css">
-        <link rel="stylesheet" href="/css/buscador.css">
-        <link rel="stylesheet" href="buzonQuejas.css">
+        <link rel="stylesheet" href="/css/buzon.css">
+
     </head>
-    <style>
-        
-        
-        body {
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-            background-color: #272626;
-            color: white;
-            background-image: url("/images/body.jpg");
-            background-size: cover;
-            align-items: center;
-        }
-        header {
-            font-size: 15px;
-            object-fit: contain;
-            width: 100%;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            background-color: transparent;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
-            border-bottom: 5px solid #ffc105;
-        }
-        .logo {
-            width: 90px;
-            height: 70px;
-            object-position: center;
-            transform: translate(10%);
-            margin-top: -4px;
-        }
-        .text {
-            letter-spacing: 3px;
-            color: white;
-            font-weight: 700;
-            text-align: end;
-            transform: translate(20%);
-            font-size: 25px;
-        }
 
-        .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items:center; 
-            height: 100vh; 
-            flex-direction: column;
-            padding-top: 20px;
-        }
-
-        .form-container {
-            align-items: center;
-            background: #272626;
-            padding: 20px;
-            border-radius: 5px;
-            border: 1px solid white; /* Borde blanco */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 500px; /* Ancho del formulario aumentado */
-            text-align: center;
-            margin-top: 20px; /* Espacio superior */
-            color: white;
-         
-        }
-
-        .form-container label {
-            display: block;
-            text-align: left ;
-            margin-top: 10px;
-            padding-left: 50px; /* Ajusta el valor según lo que necesites */
-        }
-
-        .form-container input,
-        .form-container textarea {
-            width: 80%;
-            padding: 8px;
-            margin-top: 5px;
-            border-color: white;
-            background-color: #272626;
-            border-radius: 5px;
-            color: white;
-        }
-
-
-        .form-container button {
-             margin-top: 10px;
-            padding: 10px 150px;
-            border-radius: 5px;
-            background-color: #ffc105;
-            color: black;
-            border: none;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        p{
-            color: white;
-        }   
-    </style>
-    <body >
-        <header class="">
-            <div class="logo">
-                <a href="/">
-                    <img alt="UFCJ" class="logo" src="/images/favicon.ico"/>
-                </a>
-            </div>
-            <b><h1 class="ufcj">EmergencyApp</h1></b>
-        </header>
-        <div id="menu">
-            <ul id="menu-list">
-                <!--Elementos dinámicos-->
-            </ul>
+<body >
+    <header>
+        <div class="logo">
+            <a href="/">
+                <img alt="EmergencyApp" class="logo" src="/images/logo.png"/>
+            </a>
         </div>
-        <script src="/js/Menu.js"></script>
+        <b><h1 class="text">EmergencyApp</h1></b>
+    </header>
 
-        <div class="wrapper"> 
-            <p>¡Bienvenido a nuestro Buzón de Quejas! Valoramos tu opinión y estamos comprometidos a mejorar nuestros servicios.</p>
-            <P>Si tienes una queja, por favor proporciona la siguiente información:</P>
-    
-            <div class="form-container">
-                <form action="/submit-complaint" method="POST">
+        <div class="content-wrapper"> 
+            <div class="text-section">
+                <p>¡Bienvenido a nuestro Buzón de Quejas! Valoramos tu opinión y estamos comprometidos a mejorar nuestros servicios.</p>
+                <P>Si tienes una queja, por favor proporciona la siguiente información:</P>
+            </div>
+            
+            <div class="form-section ">
+                <div class="container">
+                    <center><h2 style="font-weight: 700; color: white; margin-bottom: 20px;">Buzón de quejas</h2></center>
+                
+                <form action="/submit-complaint" method="POST">                    
                     <label for="date">Fecha</label>
                     <input type="date" id="date" name="date" required>
-    
+            
                     <label for="location">Lugar donde ocurrió</label>
                     <input type="text" id="location" name="location" required>
-    
+            
                     <label for="details">Detalles del problema</label>
                     <textarea id="details" name="details" rows="4" required></textarea>
-    
+            
                     <button type="submit">Enviar</button>
-                </form>
+                </form
+                ></div>
             </div>
-
+        <br><br><br>
         </div>
-
-
-
         <footer>
-            <div id="dynamic-footer">
-            </div>
+            <div id="dynamic-footer"></div>
         </footer>
-    
         <script src="/js/Footer.js"></script>
 </body>
 </html>
