--- a/src/views/RecuperarContra.ejs
+++ b/src/views/RecuperarContra.ejs
@@ -1,68 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Recuperar contraseña UFCJ</title>
+        <title>Recuperar contraseña</title>
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
         <!--metadatos-->
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
-        <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
+        <meta name="description" content="EmergencyApp">
+        <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda">
         <meta name="robots" content="index"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/EstiloFooter.css">
         <link rel="stylesheet" href="/css/index.css">
-        <link rel="stylesheet" href="/css/buscador.css">
         <link rel="stylesheet" href="/css/recuperar.css">
     </head>
     <body>
-        <header class="">
+        <header>
             <div class="logo">
                 <a href="/">
-                    <img alt="UFCJ" class="logo" src="/images/favicon.ico"/>
+                    <img alt="EmergencyApp" class="logo" src="/images/logo.png"/>
                 </a>
             </div>
-            <b><h1 class="ufcj">UNIVERSIDAD FRONTERIZA DE CIUDAD JUÁREZ</h1></b>
-                <div class="buscar-wrapper">
-                    <ul id="results" class="results"></ul>
-                    <input type="text" id="buscar" placeholder="Buscar" class="buscar-input">
-                    <button onclick="buscar()" class="buscar-button">Buscar</button>
-                </div>
-                <script src="/js/Buscador.js"></script>
-            </div>
+            <b><h1 class="text">EmergencyApp</h1></b>
         </header>
-        <div id="menu">
-            <ul id="menu-list">
-                <!--Elementos dinámicos-->
-            </ul>
-        </div>
-        <script src="/js/Menu.js"></script>
-
-        <div class="contenedor-principal">
-            <div class="imagen-container">
-                <img src="/images/user.png" alt="Búzon de Quejas" class="imagen-buzon">
-            </div>
-            <div class="contenedor-secundario">
-                
-            <br>
-            <center><h2 style="font-weight: 700;">Recuperar contraseña</h2></center>
-            <form action="/recuperar-contrasena" method="POST">
-                <label for="text">Ingresa tu correo:</label>
-                <input type="email" id="correo" name="correo" placeholder="Escribe tu correo electrónico" class="inputs" required>
-                <input type="button" value="Regresar" onclick="window.location.href='/login' " class="btn-regresar">
-                <input type="submit" value="Enviar" class="iniciar">      
-            </form>
-            </div>
-        </div>
-    
-        <script src="recovery.js"></script>
         
-        <footer>
-            <div id="dynamic-footer">
+        <div class="content-wrapper">
+            <div class="text-section">
+                <center><h2 class="text-section">Continua en EmergencyApp</h2>
+                <p class="text-section2">Recupera tu contraseña para seguir continuando con seguridad al máximo</p></center>
             </div>
-        </footer>
     
+            <div class="form-section">
+                <div class="container">
+                    <center><h2 style="font-weight: 700; color:#ffc105 ;">Recuperar contraseña</h2></center>
+                <form action="/recuperar-contrasena" method="POST">
+                    <label for="text">Ingresa tu correo:</label>
+                    <input type="email" id="correo" name="correo" placeholder="Escribe tu correo electrónico" class="inputs" required>
+                    <input type="button" value="REGRESAR" onclick="window.location.href='/' " class="btn-regresar">
+                    <br>
+                    <input type="submit" value="ENVIAR" class="iniciar">      
+                </form>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div id="dynamic-footer"></div>
+        </footer>
         <script src="/js/Footer.js"></script>
 </body>
 </html>
