--- a/src/views/contacto.ejs
+++ b/src/views/contacto.ejs
@@ -2,43 +2,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contacto UFCJ</title>
+    <title>Contacto</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <!--metadatos-->
     <meta charset="UTF-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
-    <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
+    <meta name="description" content="EmergencyApp">
+    <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda">
     <meta name="robots" content="index"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/EstiloFooter.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/buscador.css">
+    <!--link rel="stylesheet" href="/css/index.css"-->
     <link rel="stylesheet" href="/css/contacto.css">
 </head>
 <body>
-    <header class="">
+    <header>
         <div class="logo">
             <a href="/">
-                <img alt="UFCJ" class="logo" src="/images/favicon.ico"/>
+                <img alt="EmergencyApp" class="logo" src="/images/logo.png"/>
             </a>
         </div>
-        <b><h1 class="ufcj">UNIVERSIDAD FRONTERIZA DE CIUDAD JUÁREZ</h1></b>
-            <div class="buscar-wrapper">
-                <ul id="results" class="results"></ul>
-                <input type="text" id="buscar" placeholder="Buscar" class="buscar-input">
-                <button onclick="buscar()" class="buscar-button">Buscar</button>
-            </div>
-            <script src="/js/Buscador.js"></script>
-        </div>
+        <b><h1 class="text">EmergencyApp</h1></b>
     </header>
-    <div id="menu">
-        <ul id="menu-list">
-            <!--Elementos dinámicos-->
-        </ul>
-    </div>
-    <script src="/js/Menu.js"></script>
     
     <div class="container">
         <div class="column">
@@ -48,17 +34,16 @@
                 <p>Si tienes alguna pregunta o necesitas más información adicional, no dudes en contactarnos a través de los siguientes medios:</p>
                 <ul>
                     <li><strong>Teléfono:</strong> 656 782 5559</li>
-                    <li><strong>Correo electrónico:</strong> <a href="mailto:soporte@ufcj.edu.mx">soporte@ufcj.edu.mx</a></li>
-                    <li><strong>Dirección:</strong> Blvd. Independencia #2810. H Col. Praderas del Bravo 32695 Ciudad Juárez Chihuahua México</li>
+                    <li><strong>Buzón de quejas:</strong> <a href="/BuzonQuejas">Clic aquí</a></li>
+                    <li><strong>Dirección:</strong>Blvd. Independencia 1510, 32599 Juárez, Chih</li>
                 </ul>
             </section>
             <section>
-                <h2>Horario de Atención</h2>
-                <p>Estamos disponibles para atenderte en los siguientes horarios:</p>
+                <h2>Horarios de apertura</h2>
                 <ul>
-                    <li><strong>Lunes a Viernes:</strong> 9:30 AM - 18:30 PM</li>
-                    <li><strong>Sábado:</strong> 10:00 AM - 14:00 PM</li>
-                    <li><strong>Domingo:</strong> Cerrado</li>
+                    <li><strong>Lunes a Viernes:</strong> 05:00 AM - 12:00 AM</li>
+                    <li><strong>Sábado:</strong> 09:00 AM - 18:00 PM</li>
+                    <li><strong>Domingo:</strong> 10:00 AM - 16:00 PM</li>
                 </ul>
             </section>
         </div>
@@ -68,17 +53,16 @@
                 <p>Síguenos en nuestras redes sociales para estar al tanto de las últimas novedades e información relevante de la comunidad:</p>
                 <div class="redes-container">
                     <a href="https://www.facebook.com/" class="red-social"><img src="/images/facebook.png" alt="Facebook" style="width: 100%;"><br> Facebook</a>
-                    <a href="https://www.linkedin.com/" class="red-social"><img src="/images/linkedin.png" alt="LinkedIn" style="width: 100%;"><br> LinkedIn</a>
                     <a href="https://x.com/" class="red-social"><img src="/images/twitter.png" alt="Twitter" style="width: 100%;"><br> Twitter</a>
                     <a href="https://www.instagram.com/" class="red-social"><img src="/images/instagram.png" alt="Instagram" style="width: 100%;"><br> Instagram</a>
+                    <a href="https://www.tiktok.com/" class="red-social"><img src="/images/tiktok.png" alt="tiktok" style="width: 100%;"><br>Tiktok</a>
                 </div>
             </section>
         </div>
     </div>
 
     <footer>
-        <div id="dynamic-footer">
-        </div>
+        <div id="dynamic-footer"></div>
     </footer>
     <script src="/js/Footer.js"></script>
 </body>
