--- a/src/views/correoEnviado.ejs
+++ b/src/views/correoEnviado.ejs
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Correo Enviado</title>
     <style>
+        body {
+            color: white;
+            background-color: #272626;
+        }
         .container {
             display: flex;
             flex-direction: column;
@@ -42,7 +46,7 @@
 
     <script>
         setTimeout(function() {
-            window.location.href = '/login';
+            window.location.href = '/';
         }, 5000);
     </script>
 </body>
