ruta de admin y label de registro

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -40,6 +40,10 @@
                         <label for="usuario">Correo:</label>                
                     </div>
                     <div class="input-container">
+                        <input type="text" id="nombre" name="nombre" class="inputs" placeholder="" required>
+                        <label for="usuario">Nombre:</label>                
+                    </div>
+                    <div class="input-container">
                         <input type="password" id="contra" name="Password" class="inputs" placeholder="" required>
                         <label for="text">Contraseña:</label>
                     </div>    
