vista Sucursal y ubicación actualizada

--- a/src/views/contacto.ejs
+++ b/src/views/contacto.ejs
@@ -35,7 +35,8 @@
                 <ul>
                     <li><strong>Teléfono:</strong> 656 782 5559</li>
                     <li><strong>Buzón de quejas:</strong> <a href="/BuzonQuejas">Clic aquí</a></li>
-                    <li><strong>Dirección:</strong>Blvd. Independencia 1510, 32599 Juárez, Chih</li>
+                    <li><strong>Dirección:</strong> Trainer Gym Mezquital, Is Art, Calle Libramiento Regional, Hacienda de la luz.
+                        Plaza Time, Fraccionamiento El Mezquital, 32695 Chih.</li>
                 </ul>
             </section>
             <section>
