--- a/src/views/Sucursal.ejs
+++ b/src/views/Sucursal.ejs
@@ -7,37 +7,67 @@
     <meta charset="UTF-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
-    <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
+    <meta name="description" content="EmergencyApp">
+    <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda">
     <meta name="robots" content="index"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/EstiloFooter.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/alumnos.css">
-    <link rel="stylesheet" href="/css/buscador.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>  
 </head>
 
 <style>
-
-    .Texto2{
-        letter-spacing: 4px;
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        background-color: #272626;
+        color: white;
+        background-size: cover;
+    }
+    .body-registro {
+        background-size: 100% 100% !important;
+    }
+    /* Estilos del header */
+    header {
+        font-size: 15px;
+        object-fit: contain;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+        border-bottom: 5px solid #ffc105;
+    }
+    .logo {
+        width: 90px;
+        height: 70px;
+        object-position: center;
+        transform: translate(10%);
+        margin-top: -4px;
+    }
+    .text {
+        letter-spacing: 3px;
         color: white;
         font-weight: 700;
         text-align: end;
         transform: translate(20%);
+        font-size: 25px;
+    }
+    .Texto2{
+        color: white;
+        font-weight: 600;
+        text-align: end;
         font-size: 40px;
-        margin-top: -100px;
-
     }
     .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items:center; 
-            height: 80vh; 
-            flex-direction: column;
-            padding-top: 70px;
+        display: flex;
+        justify-content: center;
+        align-items:center; 
+        height: 80vh; 
+        flex-direction: column;
+        padding-top: 70px;
     }
     .Mapa{
         align-items: center;
@@ -49,14 +79,14 @@
         display: block;
         text-align: left ;
         margin-top: 10px;
-        padding-left: 320px; /* Ajusta el valor según lo que necesites */
+        padding-left: 320px;
     }
     .Texto{
         font-size: 15px;
         display: block;
         text-align: left ;
         margin-top: 10px;
-        padding-left: 320px; /* Ajusta el valor según lo que necesites */
+        padding-left: 320px;
     }
 </style>
 
@@ -64,38 +94,30 @@
     <header class="">
         <div class="logo">
             <a href="/">
-                <img alt="UFCJ" class="logo" src="/images/logo.png"/>
+                <img alt="EmergencyApp" class="logo" src="/images/logo.png"/>
             </a>
         </div>
-        <b><h1 class="ufcj">EmergencyApp</h1></b>
+        <b><h1 class="text">EmergencyApp</h1></b>
         </div>
     </header>
 
-    <div id="menu">
-        <ul id="menu-list">
-            <!--Elementos dinámicos-->
-        </ul>
-    </div>
-    <script src="/js/Menu.js"></script>
-
     <div class="wrapper">
-        <h1 class="Texto2">Sucursal</h1>
+        <h1 class="Texto2">¡Ven y vísitanos en nuestra sucursal!</h1><br>
         <div id="map" class="Mapa"></div>
     </div>
     <p>● ● Dirección </p>
     <p class="Texto">Trainer Gym Mezquital, Is Art, Calle Libramiento Regional, Hacienda de la luz. Plaza Time, Fraccionamiento</p>
     <p class="Texto"> El Mezquital, 32695 Chih.</p>
     <p>● ● Horario </p>
-    <p class="Texto">Lunes a Viernes 6:00 am - 11:00 pm</p>
-    <p class="Texto">Sábado a Domingo 8:00 am - 4:00 pm</p>
-    
+    <p class="Texto">Lunes a Viernes: 05:00 AM - 12:00 AM</p>
+    <p class="Texto">Sábado: 09:00 AM - 18:00 PM</p>
+    <p class="Texto">Domingo: 10:00 AM - 16:00 PM</p>
+   
 
-    <!-- Script para inicializar el mapa -->
     <script>
         // Coordenadas de Trainer Gym Mezquital en Ciudad Juárez
             var lat = 31.7328;
             var lon = -106.4635;
-        
     
             var map = L.map('map').setView([lat, lon], 15);  
     
@@ -112,8 +134,7 @@
     <br><br><br>
 
     <footer>
-        <div id="dynamic-footer">
-        </div>
+        <div id="dynamic-footer"></div>
     </footer>
 
 
