--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,8 +35,8 @@
                 <br>
                 <form action="/database/login" method="post">
                     <center>
-                        <input type="text" id="usuario" name="Correo" class="inputs" placeholder="Escribe tu usuario" required>
-                        <input type="password" id="contrasena" name="Password" class="inputs" placeholder="Escribe tu contraseña" required>
+                        <input type="text" id="correo" name="correo" class="inputs" placeholder="Escribe tu usuario" required>
+                        <input type="password" id="password" name="password" class="inputs" placeholder="Escribe tu contraseña" required>
                         <br><br>
                         <input type="submit" value="INICIAR SESIÓN" class="iniciar">
                         <br><br>
