--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -36,7 +36,7 @@
                 <br>
                 <form action="/database/estudiantes" method="post" onsubmit="return validarFormulario()">
                     <div class="input-container">
-                        <input type="email" id="correo" name="Correo" class="inputs" placeholder="" required>
+                        <input type="email" id="correo" name="correo" class="inputs" placeholder="" required>
                         <label for="usuario">Correo:</label>                
                     </div>
                     <div class="input-container">
@@ -44,23 +44,23 @@
                         <label for="usuario">Nombre:</label>                
                     </div>
                     <div class="input-container">
-                        <input type="password" id="contra" name="Password" class="inputs" placeholder="" required>
+                        <input type="password" id="password" name="password" class="inputs" placeholder="" required>
                         <label for="text">Contraseña:</label>
                     </div>    
                     <div class="input-container">
-                        <input type="password" id="contra_confirmar" name="pass_confirmar" class="inputs" placeholder="" required>
+                        <input type="password" id="pass_confirmar" name="pass_confirmar" class="inputs" placeholder="" required>
                         <label for="text">Confirmar Contraseña:</label>
                     </div>
                     <div class="input-container">
-                        <input type="number" id="edad_user" name="edad_confirmar" class="inputs" placeholder="" required>
+                        <input type="number" id="grupo" name="grupo" class="inputs" placeholder="" required>
                         <label for="text">Ingresa tu edad:</label>
                     </div>
                     <div class="input-container">
-                        <input type="number" id="peso_user" name="peso_confirmar" class="inputs" placeholder="" required>
+                        <input type="number" id="tutor" name="tutor" class="inputs" placeholder="" required>
                         <label for="text">Ingresa tu peso:</label>
                     </div>
                     <div class="input-container">
-                        <input type="double" id="altura_user" name="altura_confirmar" class="inputs" placeholder="" required>
+                        <input type="double" id="carrera" name="carrera" class="inputs" placeholder="" required>
                         <label for="text">Ingresa tu estatura:</label>
                     </div>
                     <div class="text-center mt-4 button-container">
