--- a/src/views/Perfil.ejs
+++ b/src/views/Perfil.ejs
@@ -1,88 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Perfil de estudiante UFCJ</title>
+    <title>Perfil</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <!--metadatos-->
+    <!-- Metadatos -->
     <meta charset="UTF-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
-    <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
+    <meta name="description" content="EmergencyApp">
+    <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda">
     <meta name="robots" content="index"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/EstiloFooter.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/buscador.css">
     <link rel="stylesheet" href="/css/login.css">
-    <style>
-        .contenedor {
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .btns {
-            width: 200px;
-            background-color: #e4e0df;
-            color: black;
-            font-weight: 600;
-            margin-top: 6%;
-            margin-left: -8%;
-        }
-        .button-container {
-            margin: 10px;
-        }
-        .btn-row {
-            display: flex;
-            justify-content: space-around;
-            margin: 20px 0;
-        }
-        footer {
-            margin-top: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/user.css">
 </head>
 <body>
-    <header class="">
+    <header>
         <div class="logo">
             <a href="/">
-                <img alt="UFCJ" class="logo" src="/images/favicon.ico"/>
+                <img alt="EmergencyApp" class="logo" src="/images/logo.png"/>
             </a>
         </div>
-        <b><h1 class="ufcj">UNIVERSIDAD FRONTERIZA DE CIUDAD JUÁREZ</h1></b>
-        <div class="buscar-wrapper">
-            <ul id="results" class="results"></ul>
-            <input type="text" id="buscar" placeholder="Buscar" class="buscar-input">
-            <button onclick="buscar()" class="buscar-button">Buscar</button>
-        </div>
-        <script src="/js/Buscador.js"></script>
+        <b><h1 class="text">EmergencyApp</h1></b>
+        <button class="logout-btn" onclick="logout()">Cerrar sesión</button>
     </header>
-    <div id="menu">
-        <ul id="menu-list">
-            <!--Elementos dinámicos-->
-        </ul>
-    </div>
-    <script src="/js/Menu.js"></script>
 
     <div class="contenedor">
-        <center><br>
-            <p><strong>Nombre:</strong> <%= typeof nombre !== 'undefined' ? nombre : '' %></p>
-            <p><strong>Edad:</strong> <%= typeof grupo !== 'undefined' ? grupo : '' %></p>
-            <p><strong>Peso:</strong> <%= typeof tutor !== 'undefined' ? tutor : '' %></p>
-            <p><strong>Estatura:</strong> <%= typeof carrera !== 'undefined' ? carrera : '' %></p><br>     
-        </center>
-    </div>
-
-    <div class="btn-row">
-        <div class="button-container">
-            <button type="button" class="btn btn-primary btns" onclick="window.location.href='/chat'">Chat</button>
-        </div>
-        <div class="button-container">
-            <button type="button" class="btn btn-secondary btns" onclick="window.location.href='/calificaciones'">Calificaciones</button>
-        </div>
-        <div class="button-container">
-            <button type="button" class="btn btn-danger btns" onclick="logout()">Cerrar sesión</button>
+        <div class="profile-box">
+            <center>
+                <p><strong>Nombre:</strong> <%= typeof nombre !== 'undefined' ? nombre : '' %></p>
+                <p><strong>Edad:</strong> <%= typeof grupo !== 'undefined' ? grupo : '' %></p>
+                <p><strong>Peso:</strong> <%= typeof tutor !== 'undefined' ? tutor : '' %></p>
+                <p><strong>Estatura:</strong> <%= typeof carrera !== 'undefined' ? carrera : '' %></p>
+            </center>
         </div>
     </div>
 
